--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
     </body>
 
     <div class="ending">
-        <p>Be Happy and Endure a great things ahead</p>
-        <p>Be Creative, Be Healthy , Be Positive....</p>
+        <p><br><br><center>Be Happy and Endure a great things ahead</center></p>
+        <p><center>Be Creative, Be Healthy , Be Positive....</center></p>
     </div>
 
 </html>
