--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </body>
 
     <div class="ending">
-        <p><center><br>Be Happy and Endure a great things ahead</center></p>
+        <p><center>Be Happy and Endure a great things ahead</center></p>
         <p><center>Be Creative, Be Healthy , Be Positive....</center></p>
     </div>
 
